--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,11 @@
   "version": "1.0",
 
   "permissions": [],
-  "browser_action": {},
+  "browser_action": {
+    "default_title": "Sidekick",
+    "default_icon": "sidekick/chemistry.png",
+    "default_popup": "sidekick/popup.html"
+    },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -26,7 +30,9 @@
   	"example/style.css",
     "example/script.js",
     "nyt/style.css",
-    "nyt/script.js"
+    "nyt/script.js",
+    "sidekick/popup.css",
+    "sidekick/popup.js"
   ]
 
 }
